bynkc/tests/fixtures/positive/82_capability_declaration/src/demo/svc.bynk
context demo.svc

capability Logger {
  fn log(message: String) -> Effect[()]
  fn error(message: String) -> Effect[()]
}
