bynkc/tests/fixtures/negative/64_capability_outside_context/input.bynk
commons demo

capability Logger {
  fn log(m: String) -> Effect[()]
}
